--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookthatapp-sdk",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "The SDK is intended to be used by customers to access BookThatApp from the browser or node.",
   "main": "/src/index.js",
   "repository": {
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Zetya/bookthatapp-sdk#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "base-64": "^0.1.0"
+    "base-64": "^0.1.0",
+    "es6-promise": "^4.2.5"
   }
 }
