update package.json author

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   ],
   "license": "MIT",
   "author": {
-    "name": "Zetya",
-    "email": "info@zetya.com",
-    "url": "https://zetya.com"
+    "name": "Bookthatapp",
+    "email": "support@zetya.com",
+    "url": "http://www.bookthatapp.com/"
   },
   "bugs": {
     "url": "https://github.com/Zetya/bookthatapp-sdk/issues"
