--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookthatapp-sdk",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "The SDK is intended to be used by customers to access BookThatApp from the browser or node.",
   "main": "/src/index.js",
   "repository": {
@@ -23,6 +23,18 @@
   "homepage": "https://github.com/Zetya/bookthatapp-sdk#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.4",
     "base-64": "^0.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "webpack": "^4.20.2",
+    "webpack-cli": "3.1.1"
+  },
+  "scripts": {
+    "build": "webpack --mode=production"
   }
 }
