--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bookthatapp-sdk",
-  "version": "1.3.0",
+  "version": "1.3.01",
   "description": "The SDK is intended to be used by customers to access BookThatApp from the browser or node.",
-  "main": "/src/index.js",
+  "main": "src/index.js",
+  "types": "dist/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Zetya/bookthatapp-sdk.git"
@@ -22,17 +23,17 @@
   },
   "homepage": "https://github.com/Zetya/bookthatapp-sdk#readme",
   "dependencies": {
-    "axios": "^0.19.0",
-    "babel-loader": "^8.0.4",
-    "base-64": "^0.1.0"
+    "axios": "^1.4.0",
+    "@babel/core": "^7.22.1",
+    "webpack": "^5.85.1",
+    "base-64": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "3.1.1"
+    "@babel/preset-env": "^7.22.4",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
+    "babel-loader": "^9.1.2",
+    "webpack-cli": "^5.1.3"
   },
   "scripts": {
     "build": "webpack --mode=production"
